--- a/molly/molly/apps/sakai/templates/sakai/evaluation/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/evaluation/index.html
@@ -3,10 +3,13 @@
 {% block content %}
 
 <div class="section">
-  <h2>Current surveys</h2>
-{% if submitted %}
-  <div class="bubble pad-10">
-    Thank you for taking part in the survey; your responses have been safely submitted.
+  <div class="header">
+    <h2>Current surveys</h2>
+    {% if submitted %}
+    <div class="bubble pad-10">
+      Thank you for taking part in the survey; your responses have been safely submitted.
+    </div>
+    {% endif %}
   </div>
 {% endif %}
   <ul class="link-list">
