--- a/molly/molly/apps/sakai/templates/sakai/signup/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/signup/index.html
@@ -4,7 +4,7 @@
 <div class="section">
     <div class="header">
     <h2>Sign-up events by Weblearn site</h2>
-    <p>We're still working on a way of only showing you sites that you have tutorials available to book, bear with us in the mean time!</p>
+    <p>We're still working on a way of only showing you sites that you have tutorials available to book; bear with us in the meantime!</p>
     </div>
 <ul class="link-list">
 {% for id, title in sites %}
