More minor changes to the working and layout of the auth/oauth templates.

--- a/molly/molly/auth/templates/auth/oauth/authorize.html
+++ b/molly/molly/auth/templates/auth/oauth/authorize.html
@@ -8,11 +8,11 @@
   </div>
   
   <div class="section-content">
-    <p>
+    <p style="font-size:1.2em">
       This page provides information from {{ service_name }}, requiring you to allow access from Mobile Oxford to your {{ service_name }} account.
     </p>
-    <p>
-      Select <strong>Authorise&hellip;</strong> to be redirected to
+    <p style="font-size:1.2em">
+      Select <strong>Proceed&hellip;</strong> to be redirected to
       {{ service_name }} to confirm that you agree that access should be
       granted. If this page is not what you expected, select
       <strong>Cancel</strong>.
@@ -26,7 +26,7 @@
     </p>
     
     <div class="button">
-      <a href="{{ authorize_url }}">Authorise&hellip;</a>
+      <a href="{{ authorize_url }}">Proceed&hellip;</a>
     </div>
     <div class="button">
       <a href="{{ return_url }}">Cancel</a>
