Added auth icon.

--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -201,6 +201,7 @@ div#bc-title h1.weather-header {  background-image:url('../../png/index-icons/we
 div#bc-title h1.service_status-header {  background-image:url('../../png/index-icons/service_status-bc.png');}
 div#bc-title h1.weblearn-header {  background-image:url('../../png/index-icons/weblearn-bc.png');}
 div#bc-title h1.feature_vote-header {  background-image:url('../../png/index-icons/feature_vote-bc.png');}
+div#bc-title h1.auth-header {  background-image:url('../../png/index-icons/auth-bc.png');}
 /* End Breadcrumb Trail Styles */
 
 
