Fixed service status styling (I'd previously commented out a bizarre bit of CSS, not knowing what it was for.)

--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -264,14 +264,12 @@ ul.link-list li a, ol.search-results li a {
 }
 /* End Link-List */
 
-/* What is this /for/!?
-ul li span {
+li.service-status > span {
     background-position: left;
     background-repeat: no-repeat;
     display:block;
     padding-left: 25px;
 }
-*/
 
 ul.stand-alone {
     margin: 10px;
