--- a/molly/molly/apps/places/templates/places/entity_detail.html
+++ b/molly/molly/apps/places/templates/places/entity_detail.html
@@ -8,6 +8,7 @@
 
 <div class="section">
   {% include "places/metadata/real_time_information.html" %}
+  {% include "places/metadata/ldb.html" %}
 	{% if entity.location %}
 	
 	{% ifnotequal style_group "dumb" %}
