--- a/molly/demos/brookes/templates/base.xhtml
+++ b/molly/demos/brookes/templates/base.xhtml
@@ -42,7 +42,7 @@
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
-          <img src="{{ MEDIA_URL }}png/logo.png" width="57" height="30" alt="Home"/>
+          <img src="{{ MEDIA_URL }}png/logo.png" width="66" height="30" alt="Home"/>
         </a></li>
     {% if breadcrumbs.2 %}
         <li><a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">
@@ -97,7 +97,7 @@
     <div class="bubble pad-10">
 {% block bottom_links %}
         <a href="{% url feedback:index %}?referer={{ full_path|urlencode }}">Provide feedback for this page.</a><br />
-		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://m.ox.ac.uk{{ full_path|urlencode }}">2D Barcode for this page</a><br/>
+		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://mob-dev.brookes.ac.uk{{ full_path|urlencode }}">2D Barcode for this page</a><br/>
 {% endblock %}
     </div>
 {% endif %}
