Updated some image URLs to point to their new locations.

--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -20,8 +20,8 @@
 {% endif %}
 
 {% if device|device_has_parent:"apple_iphone_ver1" %}
-    <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
-    <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
+    <link rel="apple-touch-icon" href="{{ MEDIA_URL}}site/png/apple-touch-icon.png"/>
+    <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}site/png/apple-touch-startup-image.jpg">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 {% endif %}
@@ -30,7 +30,7 @@
   {% compressed_js 'jquery-1.4.2' %}
   {% compressed_js style_group %}
 {% endif %}
-    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
+    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}site/png/favicon.png"/>
 {% block extrahead %}{% endblock extrahead %}
 </head>
 
@@ -44,11 +44,11 @@
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
-          <img src="{{ MEDIA_URL }}png/logo.png" width="57" height="30" alt="Home"/>
+          <img src="{{ MEDIA_URL }}site/png/logo.png" width="57" height="30" alt="Home"/>
         </a></li>
     {% if breadcrumbs.2 %}
         <li><a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">
-          <img src="{{ MEDIA_URL }}png/index-icons/{{ breadcrumbs.0 }}-bc.png" alt="{{ breadcrumb.1.0 }}"/>
+          <img src="{{ MEDIA_URL }}site/png/index-icons/{{ breadcrumbs.0 }}-bc.png" alt="{{ breadcrumb.1.0 }}"/>
         </a></li>
     {% if not breadcrumbs.3 %}
         <li><a href="{{ breadcrumbs.2.1 }}" title="{{ breadcrumbs.2.0 }}">
