--- a/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -1,5 +1,5 @@
 body {
-    background:#bbc4ce url('../../png/new/gradients/backdrop-iphone.png') repeat-x top;
+    background:#bbc4ce url('../../../site/png/new/gradients/backdrop-iphone.png') repeat-x top;
     font-family: "Liberation Sans", sans-serif;
     font-size:9pt;
     -webkit-text-size-adjust: none;
@@ -83,17 +83,17 @@ ol.icon-menu li a {
     text-decoration:none;
     color: #002147;
 }
-li#menu-contact {background-image:url('../../png/index-icons/contact.png');}
-li#menu-places {background-image:url('../../png/index-icons/places.png');}
-li#menu-podcasts {background-image:url('../../png/index-icons/podcasts.png');}
-li#menu-webcams {background-image:url('../../png/index-icons/webcams.png');}
-li#menu-news {background-image:url('../../png/index-icons/news.png');}
-li#menu-events {background-image:url('../../png/index-icons/events.png');}
-li#menu-results {background-image:url('../../png/index-icons/results.png');}
-li#menu-library {background-image:url('../../png/index-icons/library.png');}
-li#menu-weather {background-image:url('../../png/index-icons/weather.png');}
-li#menu-weblearn {background-image:url('../../png/index-icons/weblearn.png');}
-li#menu-service_status {background-image:url('../../png/index-icons/service_status.png');}
+li#menu-contact {background-image:url('../../../site/png/index-icons/contact.png');}
+li#menu-places {background-image:url('../../../site/png/index-icons/places.png');}
+li#menu-podcasts {background-image:url('../../../site/png/index-icons/podcasts.png');}
+li#menu-webcams {background-image:url('../../../site/png/index-icons/webcams.png');}
+li#menu-news {background-image:url('../../../site/png/index-icons/news.png');}
+li#menu-events {background-image:url('../../../site/png/index-icons/events.png');}
+li#menu-results {background-image:url('../../../site/png/index-icons/results.png');}
+li#menu-library {background-image:url('../../../site/png/index-icons/library.png');}
+li#menu-weather {background-image:url('../../../site/png/index-icons/weather.png');}
+li#menu-weblearn {background-image:url('../../../site/index-icons/weblearn.png');}
+li#menu-service_status {background-image:url('../../../site/png/index-icons/service_status.png');}
 /* End Index Page Specific */
 
 /* Results Releases */
@@ -145,7 +145,7 @@ ol#bc {
     display:block;
 }
 ol#bc li {
-    background-image:url('../../png/sep.png');
+    background-image:url('../../../site/png/sep.png');
     background-repeat:no-repeat;
     background-position: center right;
     padding-right: 10px;
@@ -189,19 +189,19 @@ div#bc-title h1.with-icon {
     background-position: left center;
     padding-left: 34px; /* Moves text to allow background breadcrumb image to coexist */
 }
-div#bc-title h1.places-header {     background-image:url('../../png/index-icons/places-bc.png');}
-div#bc-title h1.contact-header {  background-image:url('../../png/index-icons/contact-bc.png');}
-div#bc-title h1.webcams-header {  background-image:url('../../png/index-icons/webcams-bc.png');}
-div#bc-title h1.podcasts-header { background-image:url('../../png/index-icons/podcasts-bc.png');}
-div#bc-title h1.results-header {  background-image:url('../../png/index-icons/results-bc.png');}
-div#bc-title h1.library-header {    background-image:url('../../png/index-icons/library-bc.png');}
-div#bc-title h1.news-header {      background-image:url('../../png/index-icons/news-bc.png');}
-div#bc-title h1.events-header {      background-image:url('../../png/index-icons/events-bc.png');}
-div#bc-title h1.weather-header {  background-image:url('../../png/index-icons/weather-bc.png');}
-div#bc-title h1.service_status-header {  background-image:url('../../png/index-icons/service_status-bc.png');}
-div#bc-title h1.weblearn-header {  background-image:url('../../png/index-icons/weblearn-bc.png');}
-div#bc-title h1.feature_vote-header {  background-image:url('../../png/index-icons/feature_vote-bc.png');}
-div#bc-title h1.auth-header {  background-image:url('../../png/index-icons/auth-bc.png');}
+div#bc-title h1.places-header {     background-image:url('../../../site/png/index-icons/places-bc.png');}
+div#bc-title h1.contact-header {  background-image:url('../../../site/png/index-icons/contact-bc.png');}
+div#bc-title h1.webcams-header {  background-image:url('../../../site/png/index-icons/webcams-bc.png');}
+div#bc-title h1.podcasts-header { background-image:url('../../../site/png/index-icons/podcasts-bc.png');}
+div#bc-title h1.results-header {  background-image:url('../../../site/png/index-icons/results-bc.png');}
+div#bc-title h1.library-header {    background-image:url('../../../site/png/index-icons/library-bc.png');}
+div#bc-title h1.news-header {      background-image:url('../../../site/png/index-icons/news-bc.png');}
+div#bc-title h1.events-header {      background-image:url('../../../site/png/index-icons/events-bc.png');}
+div#bc-title h1.weather-header {  background-image:url('../../../site/png/index-icons/weather-bc.png');}
+div#bc-title h1.service_status-header {  background-image:url('../../../site/png/index-icons/service_status-bc.png');}
+div#bc-title h1.weblearn-header {  background-image:url('../../../site/png/index-icons/weblearn-bc.png');}
+div#bc-title h1.feature_vote-header {  background-image:url('../../../site/png/index-icons/feature_vote-bc.png');}
+div#bc-title h1.auth-header {  background-image:url('../../../site/png/index-icons/auth-bc.png');}
 /* End Breadcrumb Trail Styles */
 
 
@@ -272,12 +272,12 @@ ul.stand-alone {
 
 
 /* Background images primarily for list items */
-.phone {background-image:url('../../png/icons/list-phone.png');}
-.email {background-image:url('../../png/icons/list-email.png');}
-.external {background-image:url('../../png/icons/list-external.png');}
-.external-mobile {background-image:url('../../png/icons/list-external-mobile.png');}
-.audio {background-image:url('../../png/icons/list-audio.png');}
-.video {background-image:url('../../png/icons/list-video.png');}
+.phone {background-image:url('../../../site/png/icons/list-phone.png');}
+.email {background-image:url('../../../site/png/icons/list-email.png');}
+.external {background-image:url('../../../site/png/icons/list-external.png');}
+.external-mobile {background-image:url('../../../site/png/icons/list-external-mobile.png');}
+.audio {background-image:url('../../../site/png/icons/list-audio.png');}
+.video {background-image:url('../../../site/png/icons/list-video.png');}
     /* End background images for list items */
 /* End Standard List Styles */
 
@@ -484,7 +484,7 @@ table.real-time-information tr {
 button, input[type="submit"], input[type="reset"] {
     display: inline-block;
     color: #fff;
-    background: #838791 url(../../png/new/buttons/btn.bg.png) repeat-x 0px 0px;
+    background: #838791 url(../../../site/png/new/buttons/btn.bg.png) repeat-x 0px 0px;
     padding:5px 10px 6px 10px;
     font-weight:bold;
     text-shadow: 1px 1px 1px #111;
