--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -7,11 +7,11 @@
 {% block header %}
 <div id="index-header">
     <div id="index-title">
-		<!-- <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
+		<!-- <img src="{{ MEDIA_URL }}site/png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
 		{% ifequal style_group "dumb" %}
-		    <img src="{{ MEDIA_URL }}png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
+		    <img src="{{ MEDIA_URL }}site/png/new/logos/logo-90x55.jpg" alt="Mobile Oxford">
 		{% else %}
-            <img src="{{ MEDIA_URL }}png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
+            <img src="{{ MEDIA_URL }}site/png/new/logos/logo-128x51-TRMargin-5px.png" alt="Mobile Oxford"/>
         {% endifequal %}
     </div>
     <div id="index-search">
@@ -22,7 +22,7 @@
 		{% ifequal style_group "dumb" %}
 		    <input type="button" value="Search" />
 		{% else %}
-			<input type="image" src="{{ MEDIA_URL }}png/new/buttons/search-button.png" title="Search" />
+			<input type="image" src="{{ MEDIA_URL }}site/png/new/buttons/search-button.png" title="Search" />
 		{% endifequal %}
 		 </p>
 		 </form>
