--- a/molly/molly/apps/service_status/media/service_status/css/groups/smart.css
+++ b/molly/molly/apps/service_status/media/service_status/css/groups/smart.css
@@ -1,26 +1,19 @@
 
 
-li.service-status > span {
-    background-position: left;
-    background-repeat: no-repeat;
-    display:block;
-    padding-left: 25px;
-}
-
 /* OUCS Status */
-ul.service-status li {
+ul.service-status-list li.service-status-item {
     background: #121C28;
     color: #ffffff;
     background-position:10px center;
     background-repeat:no-repeat;
     border:none;
-    padding-left:25px;
+    padding-left:45px;
 }
-ul.service-status li.service-status-up { background-image:url('../../../service-status/png/icons/service-up.png'); background-color: #102821;}
-ul.service-status li.service-status-partial { background-image:url('../../../service-status/png/icons/service-partial.png'); background-color: #272810;}
-ul.service-status li.service-status-unknown { background-image:url('../../../service-status/png/icons/service-unknown.png'); background-color: #101b28;}
-ul.service-status li.service-status-down { background-image:url('../../../service-status/png/icons/service-down.png'); background-color: #281010;}
+ul.service-status-list li.service-status-up { background-image:url('../../../service_status/png/service-up.png'); background-color: #102821;}
+ul.service-status-list li.service-status-partial { background-image:url('../../../service_status/png/service-partial.png'); background-color: #272810;}
+ul.service-status-list li.service-status-unknown { background-image:url('../../../service_status/png/service-unknown.png'); background-color: #101b28;}
+ul.service-status-list li.service-status-down { background-image:url('../../../service_status/png/service-down.png'); background-color: #281010;}
 
-span.service-status, span.service-status-detail { font-size:90%; }
+span.service-status-status, span.service-status-detail { font-size:90%; }
 span.service-status-detail { font-style:italic; }
 /* End OUCS Status */
