--- a/molly/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -20,11 +20,11 @@
 
 {% block content %}
 
-<div class="section" style="background:none; padding:0;">
+<div class="section">
   <div class="header">
     {% if podcast.logo %}
     {% with device|device_has_parent:"apple_iphone_ver4"|yesno:"120,60" as max_width %}
-    <img style="border:0; float:left; margin-right:7px; margin-bottom:7px; -moz-box-shadow:1px 1px 2px #222; -webkit-box-shadow:1px 1px 2px #222" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt=""/>
+    <img class="podcasts-icon" src="{% external_image podcast.logo max_width %}" width="60" height="60" alt=""/>
     {% endwith %}
     {% endif %}
     <h2>{{ podcast.title }}</h2>
@@ -40,14 +40,14 @@
     <li>
     <h3>{{ item.title }}</h3>
     {% if item.license_data %}
-    <a style="float:right; background:none; padding:0;" href="{{ item.license }}">
-      <img style="border:0; margin-top:0px" class="podcast-license" src="{{ item.license_data.logo }}" alt="{{ item.license_data }}"/>
+    <a class="podcasts-license" href="{{ item.license }}">
+      <img src="{{ item.license_data.logo }}" alt="{{ item.license_data }}"/>
     </a>
     {% endif %}
       
-      <div style="font-size:0.9em;">
-      Published: {{ item.published_date|date:"j M Y" }}<br />
-      </div>
+      <small>
+      Published: {{ item.published_date|date:"j M Y" }}
+      </small><br />
     <div style="line-height:1.1em; margin-top:5px">
       {{ item.description|safe }}
     </div>
@@ -56,7 +56,7 @@
     {% for enc in item.podcastenclosure_set.all %}
       <li style="vertical-align:middle;">
         <a href="{{ enc.url }}?CAMEFROM=moxacuk" style="vertical-align:middle; font-size:11px">
-        <img src="{{ MEDIA_URL }}png/icons/list-{{ enc.medium }}.png" style="vertical-align:middle; border:0; margin:2px;" alt="({{ enc.medium }})"/>
+        <img src="{{ MEDIA_URL }}site/png/icons/list-{{ enc.medium }}.png" style="vertical-align:middle; margin:2px;" alt="({{ enc.medium }})"/>
           {% if item.duration %}{{ item.duration|humanize_seconds }}, {% endif %}{{ enc.get_mimetype_display|capfirst }}, {{ enc.length|filesizeformat }}
           </a>
         </li>
