Fixed URLs for OUCS and Oxford logos on oxford_stable home/index.html template.

--- a/molly/demos/molly_oxford/templates/home/index.html
+++ b/molly/demos/molly_oxford/templates/home/index.html
@@ -88,8 +88,8 @@
             Produced by Oxford University Computing Services <br /><a href="http://www.oucs.ox.ac.uk">www.oucs.ox.ac.uk</a>
         {% else %}
     <div class="content" style="margin:8px;">
-        <img src="{{ MEDIA_URL }}png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
-        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="University of Oxford" />
+        <img src="{{ MEDIA_URL }}site/png/oucs-logo-small.png" alt="Oxford University Computing Services"/>
+        <img src="{{ MEDIA_URL }}site/gif/brandmark.gif" alt="University of Oxford" />
     </div>
         {% endifequal %}
     </div>
