Updated eeeverything to reflect the metaclass-related changes of the previous commit.

--- a/molly/molly/apps/places/templates/places/index.html
+++ b/molly/molly/apps/places/templates/places/index.html
@@ -51,8 +51,8 @@
   <h2>Points of Interest</h2>
   {% include "geolocation/update_location_embed.html" %}
   <ul class="link-list">
-    <li><a href="{% url places:nearby_list %}">Near Me</a></li>
-    <li class="round-bottom"><a href="{% url places:category_list %}">By Category</a></li>
+    <li><a href="{% url places:nearby-list %}">Near Me</a></li>
+    <li class="round-bottom"><a href="{% url places:category-list %}">By Category</a></li>
   </ul>
 </div>
 {# End Points of Interest #}
