--- a/molly/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/molly/apps/places/templates/places/metadata/osm.html
@@ -39,7 +39,7 @@
     </li>
 {% endif %}
   <li class="round-bottom">
-    <a href="{% url places:entity_update entity.identifier_scheme entity.identifier_value %}">
+    <a href="{% url places:entity-update entity.identifier_scheme entity.identifier_value %}">
       Suggest a correction
     </a>
   </li>
