--- a/molly/molly/apps/z3950/templates/z3950/index.html
+++ b/molly/molly/apps/z3950/templates/z3950/index.html
@@ -8,8 +8,8 @@
     <h2>Maps</h2>
 	{% include "geolocation/update_location_embed.html" %}
     <ul class="link-list">
-        <li><a href="{% url places:category_detail "university-library" %}">List of libraries</a></li>
-        <li class="round-bottom"><a href="{% url places:nearby_detail "university-library" %}">Libraries near me</a></li>
+        <li><a href="{% url places:category-detail "university-library" %}">List of libraries</a></li>
+        <li class="round-bottom"><a href="{% url places:nearby-detail "university-library" %}">Libraries near me</a></li>
     </ul>
 </div>
 
