--- a/molly/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -17,8 +17,8 @@
 	<h2>{{ category.name }}</h2>
     <div class="note"><div class="bubble pad-10">
     Show
-    <a href="{% url podcasts:category_medium category.slug,"audio" %}">audio</a>
-    <a href="{% url podcasts:category_medium category.slug,"video" %}">video</a>
+    <a href="{% url podcasts:category-medium category.slug,"audio" %}">audio</a>
+    <a href="{% url podcasts:category-medium category.slug,"video" %}">video</a>
     <a href="{% url podcasts:category category.slug %}">all</a>
 podcasts.
     </div></div>
