Fixed typo in weblearn/sakai intro page as per MOX-42 in JIRA

--- a/molly/molly/apps/sakai/templates/sakai/index.html
+++ b/molly/molly/apps/sakai/templates/sakai/index.html
@@ -10,7 +10,7 @@
         <p>Hello {{ user_details.firstName }}; welcome to mobile WebLearn!</p>
     {% endif %}
     <p>
-      In our WebLearn Mobile preview, you can book sign-up to events that are
+      In our WebLearn Mobile preview, you can book events that are
       available through your WebLearn Sign-up tool.
     </p>
     <p>
