--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+{% load compressed %}<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
 <head>
 <title>Mobile Oxford</title>
 <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/screen.css"
+<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/screen.css"
 	type="text/css" media="screen,projection" />
-<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/print.css"
+<link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/print.css"
 	type="text/css" media="print" />
 <!--[if IE]>
-    <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/ie.css" type="text/css" media="screen,projection"/>
+    <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/ie.css" type="text/css" media="screen,projection"/>
     <![endif]-->
 <link rel="stylesheet" type="text/css"
-	href="/site-media/css/jquery.lightbox-0.5.css" />
-<link rel="shortcut icon" href="{{ MEDIA_URL }}png/favicon.png" />
+	href="{{ MEDIA_URL }}base/css/jquery.lightbox-0.5.css" />
+<link rel="shortcut icon" href="{{ MEDIA_URL }}desktop/png/favicon.png" />
 
 <style type="text/css">
 
@@ -215,7 +215,7 @@ img.shadow {
 <script src="{{ MEDIA_URL }}js/jquery-1.4.2.js" type="text/javascript"> </script>
 <script src="{{ MEDIA_URL }}js/jquery.lightbox-0.5.min.js"
 	type="text/javascript"> </script>
-<script type="text/javascript" src="{{ MEDIA_URL }}js/desktop_about.js"> </script>
+<script type="text/javascript" src="{{ MEDIA_URL }}desktop/js/desktop_about.js"> </script>
 
 
 </head>
@@ -432,15 +432,15 @@ Learn how to use Eduroam</a></p>
     <p><small>*Be aware that you may not have access to all libraries (especially those contained in colleges).</small></p>
     </div>
     <div class="span-10 align-center prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/library-search-1.png" alt="Library Search box" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-1.png" alt="Library Search box" />
     <p>Search for a book</p>
     </div>
     <div class="span-10 align-center prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/library-search-2.png" alt="Library Search results" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-2.png" alt="Library Search results" />
     <p>Find the right edition</p>
     </div>
     <div class="span-10 align-center last prepend-top">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/library-search-3.png" alt="Library Search Map Results" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/library-search-3.png" alt="Library Search Map Results" />
     <p>See where you can find the book in relation to you.
     </div>
     </div>
@@ -464,7 +464,7 @@ Learn how to use Eduroam</a></p>
     including welfare, emergency and University services.</p>
 </div>
 <div class="span-10 colborder">
-<img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/contact-search.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
+<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/contact-search.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
 </div>
 <div id="webcams" class="span-9">
     <h3>Webcams</h3>
@@ -472,7 +472,7 @@ Learn how to use Eduroam</a></p>
 </div>
 
 <div class="span-11 append-1 last">
-<img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/webcams.png" alt="Screenshot showing the Oxford Internet Institute Web cam overlooking St Giles, the Ashmolean and the Randolph Hotel." />
+<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/webcams.png" alt="Screenshot showing the Oxford Internet Institute Web cam overlooking St Giles, the Ashmolean and the Randolph Hotel." />
 </div>
 </div>
     
@@ -489,7 +489,7 @@ Learn how to use Eduroam</a></p>
      
 </div>
 <div class="span-10 colborder">
-<img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/news.png" alt="News Screenshot" />
+<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/news.png" alt="News Screenshot" />
 </div>
 <div id="podcasts" class="span-9">
     <h3>Podcasts</h3>
@@ -497,7 +497,7 @@ Learn how to use Eduroam</a></p>
     <p><b>iPhone Tip:</b> When you click on 'podcasts' you will be asked whether you'd like to use your built in iTunes App to browse our podcasts. This gives you a few advantages like being able to queue downloads and store them in your library.</p>
 </div>
 <div class="span-11 append-1 last">
-<img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/podcasts.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
+<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/podcasts.png" alt="Screenshot of the podcasts app showing Dr Stuart Lee's Old English: An Introduction page" />
 </div>
 </div>
 
@@ -508,7 +508,7 @@ Learn how to use Eduroam</a></p>
     <h3>Weather</h3>
     <p>BBC Weather with a three day forecast and live observations from RAF Benson.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/weather.png" alt="Weather Screenshot" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/weather.png" alt="Weather Screenshot" />
     <p>Weather</p> 
     </div>
 </div>
@@ -517,7 +517,7 @@ Learn how to use Eduroam</a></p>
     <h3>Results Releases</h3>
     <p>Want to know when your exam results have been released but don't want to keep logging into a computer? Check out Results Releases to see when your results have been released wherever you are.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/results-releases.png" alt="Results Releases App Screenshot" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/results-releases.png" alt="Results Releases App Screenshot" />
     <p>Results Releases</p> 
     </div>
 </div>    
@@ -526,7 +526,7 @@ Learn how to use Eduroam</a></p>
     <h3>Service Status</h3>
     <p>Check status updates from Computing Services and Library Services.</p>
     <div class="align-center">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/service-status.png" alt="Service Status App Screenshot" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/service-status.png" alt="Service Status App Screenshot" />
     <p>Service Status</p> 
     </div>
 </div> 
@@ -547,10 +547,10 @@ Learn how to use Eduroam</a></p>
     </div>
     
     <div class="span-16 align-center prepend-top ">
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/search.png" alt="Universal Search Box Screenshot" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/search.png" alt="Universal Search Box Screenshot" />
     <p>The 'Universal search' Box</p>
     <hr />
-    <img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/news-search.png" alt="News App Search Box Screenshot" />
+    <img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/news-search.png" alt="News App Search Box Screenshot" />
     <p>The search box found in the 'News' app</p>
     </div>
     
@@ -591,7 +591,7 @@ Learn how to use Eduroam</a></p>
 </div>
 
 <div class="span-16 align-center" >
-<img class="shadow" src="{{ MEDIA_URL }}/desktop/png/features/instant-info.png" alt="Instant Info Screenshot" />
+<img class="shadow" src="{{ MEDIA_URL }}desktop/png/features/instant-info.png" alt="Instant Info Screenshot" />
 <p>The Instant Info section on the front page</p>
 </div>
 
