fixing media locations to work with new app media framework

--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -267,14 +267,14 @@ using your mobile device's web browser, <a class="preview-link"
 one of these 2D Barcodes 
 <br/>
 <a class="lightbox"
-	href="/site-media/png/barcodes/qrcode.png" title="QR Code"> <img
-	src="{{ MEDIA_URL }}/png/barcodes/qrcode-small.png" alt="QR Code" /></a> <a
-	class="lightbox" href="/site-media/png/barcodes/datamatrix.png"
+	href="{{ MEDIA_URL }}desktop/png/barcodes/qrcode.png" title="QR Code"> <img
+	src="{{ MEDIA_URL }}desktop/png/barcodes/qrcode-small.png" alt="QR Code" /></a> <a
+	class="lightbox" href="{{ MEDIA_URL }}desktop/png/barcodes/datamatrix.png"
 	title="DataMatrix Code"> <img
-	src="{{ MEDIA_URL }}/png/barcodes/datamatrix-small.png"
+	src="{{ MEDIA_URL }}desktop/png/barcodes/datamatrix-small.png"
 	alt="DataMatrix Code" /></a> <a class="lightbox"
-	href="/site-media/png/barcodes/mstag.png" title="Microsoft Tag"> <img
-	src="{{ MEDIA_URL }}/png/barcodes/mstag-small.png" alt="Microsoft Tag" /></a>
+	href="{{ MEDIA_URL }}desktop/png/barcodes/mstag.png" title="Microsoft Tag"> <img
+	src="{{ MEDIA_URL }}desktop/png/barcodes/mstag-small.png" alt="Microsoft Tag" /></a>
 </p>
 </div>
 </div>
