--- a/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -712,22 +712,30 @@ div.form-section dl dd ul {
     padding-left:0;
 }
 
-div.sakai-error-message {
+div.sakai-error-message, div.sakai-notice-message {
     margin:8px;
     background-color:#ffffff;
     padding:8px;
-    border:2px solid red;
-    color: red;
     -moz-border-radius:8px;
     -webkit-border-radius:8px;
     border-radius:8px;
 }
 
-div.sakai-error-message p {
+div.sakai-error-message{
+    border:2px solid red;
+    color: red;
+}
+div.sakai-notice-message{
+    border:2px solid #002147;
+    color: #002147;
+}
+
+
+div.sakai-error-message p, div.sakai-notice-message p {
     margin: 1em 0 0 0;
 }
 
-div.sakai-error-message p:first-child {
+div.sakai-error-message p:first-child, div.sakai-notice-message p:first-child {
     margin-top: 0;
 }
 
