Added phone montage in place of individual phone images.

--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -281,11 +281,8 @@ one of these 2D Barcodes
 </div>
 
 <div class="span-27 append-1 last" style="text-align:right"><img
-    src="{{ MEDIA_URL }}desktop/png/iphone.png" height="500" width="260"
-    alt="iPhone showing Mobile Oxford" />
-    <img
-    src="{{ MEDIA_URL }}desktop/png/nexus-one.png" height="500" width="252"
-    alt="Nexus One showing Mobile Oxford" />
+    src="{{ MEDIA_URL }}desktop/png/phones.png" height="500" width="450"
+    alt="Various phones showing Mobile Oxford" />
     </div>
 
 <div class="prepend-1 span-40 append-1 last prepend-top">
