--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -10,8 +10,7 @@
 <!--[if IE]>
     <link rel="stylesheet" href="{{ MEDIA_URL }}blueprint/blueprint/ie.css" type="text/css" media="screen,projection"/>
     <![endif]-->
-<link rel="stylesheet" type="text/css"
-	href="{{ MEDIA_URL }}base/css/jquery.lightbox-0.5.css" />
+{% compressed_css "jquery.lightbox-0.5" %}
 <link rel="shortcut icon" href="{{ MEDIA_URL }}desktop/png/favicon.png" />
 
 <style type="text/css">
@@ -22,9 +21,9 @@
     background: #fdfce5;
     border-top: 12px solid #ccc;
     font-size: 0.9em;
-    box-shadow: 0 2px 10px black;
-    -webkit-box-shadow: 0 2px 10px black;
-    -moz-box-shadow: 0 2px 10px black;   
+    box-shadow: 0 0px 10px black;
+    -webkit-box-shadow: 0 0px 10px black;
+/*    -moz-box-shadow: 0 0px 10px black;  # Results in sideways scrolling in Firefox */
 }
 
 h1 {
@@ -212,10 +211,9 @@ img.shadow {
 
 </style>
 
-<script src="{{ MEDIA_URL }}js/jquery-1.4.2.js" type="text/javascript"> </script>
-<script src="{{ MEDIA_URL }}js/jquery.lightbox-0.5.min.js"
-	type="text/javascript"> </script>
-<script type="text/javascript" src="{{ MEDIA_URL }}desktop/js/desktop_about.js"> </script>
+{% compressed_js "jquery-1.4.2" %}
+{% compressed_js "jquery.lightbox-0.5.min" %}
+{% compressed_js "desktop_about" %}
 
 
 </head>
@@ -241,17 +239,16 @@ and city on the move</p>
 
 
 <div class="introduction">
-<div class="prepend-1 span-14">
+<div class="prepend-1 span-15">
 
 <h2>A wealth of
 information from across the University and City of Oxford.</h2>
 
-<p style="margin-bottom: 4px;">It's for the citizens, visitors, staff and students of Oxford and
-acts as a central guide to help you do your day-to-day tasks whether
+<p style="margin-bottom: 4px;">Whoever you are, Mobile Oxford
+is your central guide to help you do your day-to-day tasks. Whether
 it's <a href="#library">finding a library book</a>, <a href="#bus">checking
-when the next bus is</a> or even finding <a href="#places">what time
-the nearest post box is collected</a> there are many ways that Mobile Oxford
-can help you.</p>
+the next bus</a> or even finding <a href="#places">what time
+the nearest post box is collected</a> Mobile Oxford is for you.</p>
 
 <div class="accessing" style="font-size:1.2em; margin-bottom: 4px;">
 <p><a href="#features">Discover Mobile Oxford's features</a></p>
@@ -259,7 +256,7 @@ can help you.</p>
 
 <h2>You don't need a fancy phone</h2>
 <p>A device with a web browser is all you need to be able to use
-almost all the features below. Of course if you're lucky enough to own a
+most of the features below. Of course if you're lucky enough to own a
 smartphone you can use more advanced features like your GPS.</p>
 
 <div class="accessing">
@@ -268,7 +265,7 @@ smartphone you can use more advanced features like your GPS.</p>
 	href="/?preview=true">m.ox.ac.uk</a></span><br />
 using your mobile device's web browser, <a class="preview-link"
 	href="/?preview=true">preview on your computer</a> or click on and scan
-one of these 2D Barcodes 
+a 2D barcode below 
 <br/>
 <a class="lightbox"
 	href="{{ MEDIA_URL }}desktop/png/barcodes/qrcode.png" title="QR Code"> <img
@@ -284,7 +281,7 @@ one of these 2D Barcodes
 </div>
 </div>
 
-<div class="span-27 append-1 last" style="text-align:right"><img
+<div class="span-24 append-1 last align-center"><img
     src="{{ MEDIA_URL }}desktop/png/phones.png" height="500" width="450"
     alt="Various phones showing Mobile Oxford" />
     </div>
