Fixing background colour for IE7

--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -22,9 +22,9 @@
     background: #fdfce5;
     border-top: 12px solid #ccc;
     font-size: 0.9em;
-    box-shadow: 0 2px 10px black;
-    -webkit-box-shadow: 0 2px 10px black;
-    -moz-box-shadow: 0 2px 10px black;   
+    box-shadow: 0 0px 10px black;
+    -webkit-box-shadow:  0 0px 10px black;
+    -moz-box-shadow: 0 0px 10px black;   
 }
 
 h1 {
@@ -94,7 +94,7 @@ div.blurb {
 	-moz-box-shadow: 0 0 3px #AAA;
 	-webkit-box-shadow: 0 0 3px #AAA;
 	
-	background: rgba(255, 255, 255, 0.99);
+	background: #fff;
 	background: -moz-linear-gradient(center top, rgba(255, 255, 255, 0.99), rgba(248,248,248, 0.99));
 	background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0.99)), to(rgba(248,248,248, 0.99)));
 }
