--- a/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -780,7 +780,7 @@ table.content > *:last-child > tr:last-child > td:last-child {
 }
 
 div.button {
-    background:#002147 url('../../site/png/icons/list-arrow.png') no-repeat;
+    background:#002147 url('../../../site/png/icons/list-arrow.png') no-repeat;
     background-position: right center;
 
     margin: 8px 2px 0 auto;
