--- a/molly/demos/molly_oxford/templates/desktop/index.html
+++ b/molly/demos/molly_oxford/templates/desktop/index.html
@@ -322,7 +322,7 @@ a 2D barcode below
 </ul>
 <a href="http://twitter.com/mobileox">More tweets&hellip;</a></div>
 </div>
-<div class="clearfix"></div>
+<hr class="space"/>
 </div>
 </div>
 </div>
